MDEV-18204 Fix rocksdb incremental backup

Fix incremental prepare to copy #rocksdb subdirectory from the
incremental dir.